<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InicioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_marginTop="90dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_dark"
            android:layout_margin="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="15dp"
            android:paddingHorizontal="16dp"
            android:textAlignment="center"
            android:text="@string/content_start"
            />

        <Button
            android:id="@+id/btn_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="90dp"

            android:layout_marginBottom="60dp"
            android:layout_marginTop="50dp"
            android:textColor="@color/primary_light"
            android:background="@drawable/rounded"
            android:text="@string/btn_start"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_dark"
            android:layout_margin="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="18dp"
            android:paddingHorizontal="162dp"
            android:textAlignment="center"
            android:text="@string/splash_intro"
            />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>