<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp">

        <!-- Utilizando o Linear Layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="20dp">

            <!-- imagem -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="400dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="0dp"
                android:src="@drawable/info" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_dark"
                android:layout_margin="10dp"
                android:paddingTop="10dp"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="@string/Title"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_dark"
                android:layout_margin="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="16dp"
                android:paddingHorizontal="16dp"
                android:textAlignment="center"
                android:text="@string/f_content"
                />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_dark"
                android:layout_margin="10dp"
                android:paddingTop="10dp"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="@string/ftitle"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_dark"
                android:layout_margin="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="16dp"
                android:paddingHorizontal="8dp"
                android:textAlignment="center"
                android:text="@string/s_content"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="350dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="0dp"
                android:src="@drawable/ff" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_dark"
                android:layout_margin="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="Veja mais informações no Site!"
                />
        </LinearLayout>

    </ScrollView>

</ScrollView>